Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -194,7 +194,7 @@
 \vspace{8pt}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{QUALIFICATIONS}
+\section{DEGREES}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-7pt}
 \begin{outerlist}
@@ -224,9 +224,14 @@
 \vspace{-6pt}
 \begin{outerlist}
 
+ \item[\textbf{Donders Centre for Cognition, Radboud University}] \hfill
+ \begin{innerlist}
+   \item[\textbf{Netherlands}, \textit{Assistant Professor}] \hfill\textbf{2021--}
+     \end{innerlist}
+     
  \item[\textbf{Donders Centre for Cognitive Neuroimaging, Radboud University}] \hfill
  \begin{innerlist}
-   \item[\textbf{Netherlands}, \textit{Postdoctoral Researcher}] \hfill\textbf{2020--}
+   \item[\textbf{Netherlands}, \textit{Postdoctoral Researcher}] \hfill\textbf{2020--2021}
      \end{innerlist}
 
   \item[\textbf{Research Centre on Interactive Media, Smart Systems \& Emerging Technologies (\href{http://cyens.org.cy}{CYENS})}] \hfill
@@ -251,9 +256,47 @@
 \end{outerlist}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{AWARDS, FELLOWSHIPS, \& GRANTS}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6pt}
+\begin{outerlist}
+
+\item [\textbf{\href{https://www.ru.nl/radboudinternational/english/internationalisation/radboud-western-collaboration-fund/}{Western-Radboud Collaboration Fund (co-applicant)}}] \hfill \textbf{2022--}
+ 
+\begin{innerlist}
+  \item Partner in collaboration on governance of artificial intelligence (AI) systems.
+
+ \end{innerlist}
+ 
+ \item [\textbf{\href{https://ru.nl}{DCC Student Assistantship Funding}}] \hfill \textbf{2022}
+ 
+\begin{innerlist}
+  \item Designed and obtained funding for mentoring a student assistant for a project on multiple realisability; to aid in creation of a computer simulation environment.
+ \end{innerlist}
+ 
+
+
+\item[\textbf{\href{https://shuttleworthfoundation.org/fellows/flash-grants/}{Shuttleworth Foundation Flash Grant}}: \$5,000] \hfill \textbf{2021}
+\begin{innerlist}
+  \item Funding is in recognition of my work as a `` social change agent'', based on nominations from Shuttleworth Flash Fellows.
+\end{innerlist}
+
+\item [\textbf{\href{https://ru.nl}{Nomination for Faculty of Social Sciences Junior Education Prize}}] \hfill \textbf{2021}
+ 
+\begin{innerlist}
+  \item Nominated by the student representatives of the BSc Degree Programme Committee.
+ \end{innerlist}
+
+
+\item[\textbf{\href{https://www.software.ac.uk/about/fellows/olivia-guest}{Software Sustainability Institute Fellowship}}: £3,000] \hfill \textbf{2017}
+   
+
+\end{outerlist}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{SERVICE}
+\section{EDITORIAL ROLES}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-6pt}
 \begin{outerlist}
@@ -266,7 +309,21 @@
    \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--}
 
    \item[\textbf{\href{http://rescience.github.io/}{ReScience C Journal}} --- \textit{Associate Editor}] \hfill \textbf{2015--2020}
+
+
+
+   \item[\textbf{Special issue on \href{https://reproducibility-challenge.github.io/neurips2019/dates/}{NeurIPS 2019 Reproducibility Challenge}}]\hfill \textbf{2019}
+   \begin{innerlist}
+         \item[] Co-edited special issue of ReScience C.
+   \end{innerlist}
    
+   
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{REVIEWING}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6pt}
+
  \item[\textbf{Conferences (ad hoc reviewing)}] \hfill
            \begin{innerlist}
           \item []    International Conference on Learning Representations (ICLR), International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), EnviroInfo.
@@ -274,44 +331,145 @@
   
    \item[\textbf{Journals (ad hoc reviewing)}] \hfill
           \begin{innerlist}
-          \item [] Cognitive Neuropsychology,  Cognitive Psychology, Cognitive Science Journal, Journal of Cognitive Neuroscience, Journal of Open Source Education, Memory \& Cognition, PeerJ, PLoS Computational Biology, Royal Society Open Science.
+          \item [] Cognitive Neuropsychology,  Cognitive Psychology, Cognitive Science Journal, Journal of Cognitive Neuroscience, Journal of Open Source Education, Memory \& Cognition, PeerJ, PLoS Computational Biology, Royal Society Open Science, Topics in Cognitive Science.
         \end{innerlist}
 
-   \item[\textbf{Special issue on \href{https://reproducibility-challenge.github.io/neurips2019/dates/}{NeurIPS 2019 Reproducibility Challenge}}]\hfill \textbf{2019}
-   \begin{innerlist}
-         \item Co-editing special issue of ReScience C.
-   \end{innerlist}
    
     \end{outerlist}
 
-   
-  \section{OUTREACH}
-  \vspace{-10pt}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{TEACHING}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
- \begin{outerlist}
-      \item[\textbf{Computational \& statistical modelling office/social hours (with \href{http://samforbes.me/}{Samuel H. Forbes})}] \hfill \textbf{2021--}
-      \begin{innerlist}
-        \item Every Tuesday afternoon, 6pm C(S)ET onwards
-         \item  Students (especially in neuroscience and psychology) pop in for advice and mentoring
 
-   \end{innerlist}
-   
-   
-  
-   \item[\textbf{Selected popular blog posts from:}] \href{http://neuroplausible.com}{neuroplausible.com} \hfill \textbf{2017--}
-      \begin{innerlist}
-        \item \href{https://neuroplausible.com/programming}{Why Women in Psychology Can't Program}
-         \item \href{https://neuroplausible.com/matlab}{I Hate Matlab: How an IDE, a Language, and a Mentality Harm} 
+\textbf{\href{https://www.ru.nl/courseguides/socsci/bachelor/artificial-intelligence/ai-department/who-we/}{School of Artificial Intelligence}, \href{https://ru.nl}{Radboud}, NL}
+\begin{outerlist}
+    \item[Assistant Professor] \hfill \textbf{2021--}
+    \item[Postdoctoral Research Assistant] \hfill \textbf{2021}
+    \item[\textit{\href{https://www.ru.nl/courseguides/socsci/courses-osiris/ai/sow-bki332-ai-science/}{AI as a Science}}] \
+  \begin{innerlist}
+    \item Module: 3EC \textit{Third Year, B.Sc.}
+    \item Designed course from the ground up.
+    \item Redesigned course (since in its 2nd year it has 10 times the students; from 5 to 50).
+  \end{innerlist}
+      \item[\textit{\href{https://www.ru.nl/courseguides/socsci/courses-osiris/ai/sow-mki56-theoretical-foundations-for-cognitive/}{Theoretical Foundations for Cognitive Agents}}] \
+  \begin{innerlist}
+    \item Module: 6EC \textit{M.Sc.}
+    \item Redesigned course from the ground up.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
 
-   \end{innerlist}
-   
- \end{outerlist}
+
+
+\textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
+\begin{outerlist}
+    \item[Postdoctoral Research Assistant] \hfill \textbf{2014--2016}
+    \item[\textit{\href{http://oliviaguest.com/connectionism}{Block Practical: Connectionist Models and Cognitive Processes}}] \
+  \begin{innerlist}
+    \item Module: \textit{Third Year, B.Sc.}
+    \item Designed course structure and materials (slides and exercises).
+    \item Students replicated from scratch Tyler et al. (2000) in Python.
+    \item Created course website: \href{http://oliviaguest.com/connectionism}{oliviaguest.com/connectionism}.
+  \end{innerlist}
+      \item[\textit{Tutorial: Language and Cognition}] \
+  \begin{innerlist}
+    \item Module: \textit{Second Year, B.Sc.}
+    \item Set essays and marked exams.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+\textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
+UK}
+\begin{outerlist}
+   \item[Graduate Teaching Assistant] \hfill \textbf{2010--2014}
+   \item Modules Taught: \textit{General Foundations of Psychology,
+   Psychobiology, Advanced Research Methods, Advanced Quantitative Methods, Memory and Cognition, Matlab Programming for Psychological Science, }
+\end{outerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{MAIN PUBLICATIONS}
+
+   
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{SUPERVISION \& MENTORING}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6pt}
+
+
+\begin{outerlist}
+ 
+    \item[\textbf{Research project}] \hfill \textbf{2020--}
+      \begin{innerlist}
+        \item Lelia Erscoi (BSc student, Radboud University)
+        \item Rory Spanton (PhD candidate, University of Plymouth)
+        \item Prerna Aneja (PhD candidate, University of East Anglia)
+    \end{innerlist}  
+
+  
+      \item[\textbf{Thesis supervision}] \hfill \textbf{2022}
+      \begin{innerlist}
+        \item Noa Baijens (BSc thesis, 2022)
+        \item Lelia Erscoi (BSc thesis, 2022)
+        \item Evelien van Dijk (BSc thesis, 2022)
+        \item Joost Vossers (BSc thesis, 2022)
+    \end{innerlist}
+    
+ 
+      \item[\textbf{Computational \& statistical modelling office/social hours (with \href{http://samforbes.me/}{Samuel H. Forbes})}] \hfill \textbf{2021}
+      \begin{innerlist}
+        \item Every Tuesday afternoon, 6pm C(S)ET onwards.
+         \item  Students (especially in neuroscience and psychology) pop in for advice and mentoring.
+
+  \end{innerlist}
+  
+    \item[\textbf{Other supervision/mentoring}] \hfill \textbf{2010--}
+
+      \begin{innerlist}
+        \item Contributed to various projects through supervision and mentoring of students and junior researchers at
+        Birkbeck College, University of Oxford, University College London, \& Radboud University.
+
+     \end{innerlist}
+
+
+
+
+\end{outerlist}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{MANUSCRIPTS (under review, revision or in prep)}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\paper{Erscoi, L. A., Kleinherenbrink, A., \& \textbf{Guest, O.} (in prep) My Fair AI; from Pygmalion to the Present (2022). % \textit{Synthese}. %\newline
+% \href{https://doi.org/10.48550/arXiv.2202.08674}{doi.org/10.48550/arXiv.2202.08674}
+}{}
+
+\paper{\textbf{Guest, O.}, van Rooij, I., \& Martin, A. E. (in prep; invited to special issue) What are our models really, and are models real? How metatheoretical calculi can obtain in cognitive computational neuroscience (2022). \textit{Synthese}. %\newline
+% \href{https://doi.org/10.48550/arXiv.2202.08674}{doi.org/10.48550/arXiv.2202.08674}
+}{}
+
+\paper{ \textbf{Guest, O.}  \& Martin, A. E. (revise \& resubmit) On logical inference over brains, behaviour, and artificial neural networks. \textit{Computational Brain \& Behavior}. \newline
+\href{https://doi.org/10.31234/osf.io/tbmcg}{doi.org/10.31234/osf.io/tbmcg}}{}
+
+
+\paper{Forbes, S. H., Aneja, P., \& \textbf{Guest, O.} (under review in special issue). The Myth of Normative Development. \textit{Infant and Child Development}. \newline
+\href{https://doi.org/10.31234/osf.io/ajynp}{doi.org/10.31234/osf.io/ajynp}}{}
+ 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{PUBLICATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % \vspace{10pt}
+\paper{
+Levitis, E. et al. (2021). {Centering inclusivity in the design of online conferences—An OHBM–Open Science perspective. \textit{Gigascience.}}\newline
+ \href{https://doi.org/10.1093/gigascience/giab051}{doi.org/10.1093/gigascience/giab051}
+}{}
+
+
 
 \paper{
 \textbf{Guest, O.} \& Birhane, A. (2021). {Towards decolonising computational sciences}. \textit{Women, Gender \& Research.}\newline
@@ -381,46 +539,57 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  {Implementations are not specificat
 
 % \vspace{8pt}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{OTHER ARTICLES \& PREPRINTS}
+\section{CONFERENCE PROCEEDINGS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\paper{Levitis, E. et al. (2021). Centering inclusivity in the design of online conferences. \textit{PsyArXiv}. \newline
-\href{https://doi.org/10.31234/osf.io/vj5tu}{doi.org/10.31234/osf.io/vj5tu}}{}
- 
-
-\paper{Whitaker, K., \& \textbf{Guest, O.} (2020). {\#bropenscience is broken science}. \textit{The Psychologist}. \newline
-\href{https://thepsychologist.bps.org.uk/volume-33/november-2020/bropenscience-broken-science}{doi.org/10.5281/zenodo.4099011}}
-{}
 
 
 \paper{
 Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). \href{https://mindmodeling.org/cogsci2017/papers/0283/index.html}{Deep Networks as Models of Human and Animal Categorization}. \textit{In Proceedings of the 39th Annual Meeting of	the	Cognitive Science	Society}.}
 {}
 
-\paper{\textbf{Guest, O.} \& Rougier, N. P. (2016). \href{https://oliviaguest.com/doc/guest_rougier_2016.pdf}{What is computational reproducibility?} \textit{IEEE CIS Newsletter on Cognitive and Developmental Systems}.}{}
 
-\paper{\textbf{Guest, O.} (2016). Crisis in What Exactly? \textit{The Winnower}. \newline
-\href{http://dx.doi.org/10.15200/winn.146590.01538}{doi.org/10.15200/winn.146590.01538}}{}
 
 \paper{\textbf{Guest, O.}, Cooper, R. P. \& Davelaar, E. J. (2014).   \href{http://oliviaguest.com/doc/guest_14.pdf}{The Influence of Implementation on ``Hub'' Models of Semantic Cognition}. In J. Mayor, P. Gomez (Eds.), \textit{Computational Models of Cognitive Processes}.}{}
 
 \paper{\textbf{Guest, O.}, Cooper, R. P. \& Davelaar, E. J. (2012). \href{http://eprints.bbk.ac.uk/6758/}{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}. \textit{In Proceedings of the Ninth International Conference on Cognitive Modelling.}}{}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{MAGAZINES \& NEWSLETTERS}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\paper{Whitaker, K., \& \textbf{Guest, O.} (2020). {\#bropenscience is broken science}. \textit{The Psychologist}. \newline
+\href{https://thepsychologist.bps.org.uk/volume-33/november-2020/bropenscience-broken-science}{doi.org/10.5281/zenodo.4099011}}
+{}
+
+\paper{\textbf{Guest, O.} \& Rougier, N. P. (2016). \href{https://oliviaguest.com/doc/guest_rougier_2016.pdf}{What is computational reproducibility?} \textit{IEEE CIS Newsletter on Cognitive and Developmental Systems}.}{}
+
+
+\paper{\textbf{Guest, O.} (2016). Crisis in What Exactly? \textit{The Winnower}. \newline
+\href{http://dx.doi.org/10.15200/winn.146590.01538}{doi.org/10.15200/winn.146590.01538}}{}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{SELECTED INVITED\texorpdfstring{\newline}{ }TALKS \& WORKSHOPS}
+\section{PREPRINTS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%separate into preprints, proceedings, and magazines
 
-% \textbf{\href{https://www.inria.fr/en/centre-bordeaux-sud-ouest}{Bordeaux-Sud-Ouest Inria Research Centre}} 
-% \begin{outerlist}
-%   \item[] \textit{Bordeaux, France}\hfill\textbf{21--22 Sep 2020}
-%   \begin{innerlist}
-%     \item Talk: \textit{How computational modeling can force theory building in psychological science}
-%     \item Organiser: Nicolas P. Rougier
+\paper{Spanton, R. W. \& \textbf{Guest, O.} (2022) Measuring Trustworthiness or Automating Physiognomy? A Comment on Safra, Chevallier, Grèzes, and Baumard (2020). \textit{arXiv}. \newline
+\href{https://doi.org/10.48550/arXiv.2202.08674}{doi.org/10.48550/arXiv.2202.08674}}{}
+
+\paper{ \textbf{Guest, O.} (2021) \& Martin, A. E. On logical inference over brains, behaviour, and artificial neural networks. \textit{PsyArXiv}. \newline
+\href{https://doi.org/10.31234/osf.io/tbmcg}{doi.org/10.31234/osf.io/tbmcg}}{}
+
+\paper{Levitis, E. et al. (2021). Centering inclusivity in the design of online conferences. \textit{PsyArXiv}. \newline
+\href{https://doi.org/10.31234/osf.io/vj5tu}{doi.org/10.31234/osf.io/vj5tu}}{}
+ 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{SELECTED INVITED\texorpdfstring{\newline}{ }TALKS, PANELS \& WORKSHOPS}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %   \end{innerlist}
@@ -428,7 +597,75 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 % \vspace{8pt}
 
 
-\textbf{\href{https://www.inria.fr/en/centre-bordeaux-sud-ouest}{Society for Personality and Social Psychology’s Annual Convention (SPSP) 2021}} 
+
+\textbf{\href{https://www.lorentzcenter.nl/what-makes-a-good-theory-interdisciplinary-perspectives.html}{What makes a good theory? Interdisciplinary Perspectives}} 
+\begin{outerlist}
+  \item[] \textit{Leiden, NL}\hfill\textbf{20--24 Jun 2022}
+  \begin{innerlist}
+    \item Keynote speaker
+    % \item Panel: \textit{EDI in Open Research}
+    % \item Co-panellists:  Soliman, Nadia, Catherine Talbot, Kirstie Whitaker
+    \item Organisers: Iris van Rooij, Todd Wareham, Berna Devezer, Sashank Varma, and Joshua Skewes
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+
+\textbf{\href{https://www.modelinghri.com/schedule}{ACM/IEEE HRI 2022 Workshop on 
+Modeling Human Behavior 
+in Human-Robot Interactions}} 
+\begin{outerlist}
+  \item[] \textit{Virtual}\hfill\textbf{1 Mar 2022}
+  \begin{innerlist}
+    \item Keynote: \textit{How Computational Modeling Can Force Theory Building}
+    \item Organisers: Serge Thill, Arkady Zgonnikov
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+
+\textbf{\href{https://edopenresearch.com/reproducibilitea-blog/}{ Edinburgh ReproducibiliTea}} 
+\begin{outerlist}
+  \item[] \textit{Edinburgh, UK (Virtual)}\hfill\textbf{18 Feb 2022}
+  \begin{innerlist}
+    \item Panel: \textit{EDI in Open Research}
+    \item Co-panellists:  Soliman, Nadia, Catherine Talbot, Kirstie Whitaker
+    \item Organiser: Emily Sena
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+\textbf{\href{https://mindandmachine.blogs.bristol.ac.uk/seminars/}{Mind \& Machine Seminar Series 2021 at Bristol University}} 
+\begin{outerlist}
+  \item[] \textit{Bristol, UK (Virtual)}\hfill\textbf{16 Dec 2021}
+  \begin{innerlist}
+    \item Talk: \textit{On logical inference over brains, behaviour, and artificial neural networks}
+    \item Organisers: Guillermo Puebla, Valerio Biscione, and Jeff Bowers
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+\textbf{\href{https://www.ru.nl/nsm/imr/research-facilities/research-centres/vm/rucam-ssh/}{Radboud University Centre for Analytical Modelling in the Social Sciences and Humanities (RUCAM-SSH)}} 
+\begin{outerlist}
+  \item[] \textit{Nijmegen, NL}\hfill\textbf{1 Nov 2021}
+  \begin{innerlist}
+    \item Talk: \textit{On logical inference over brains, behaviour, and artificial neural networks}
+    \item Organiser: Rein van Alebeek
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+\textbf{\href{https://www.ru.nl/nsm/imr/research-facilities/research-centres/vm/rucam-ssh/}{Research colloquium at the Faculty of Psychology at the University of Basel}}
+\begin{outerlist}
+  \item[] \textit{Basel, Switzerland (Virtual)}\hfill\textbf{21 Oct 2021}
+  \begin{innerlist}
+    \item Talk: \textit{On logical inference over brains, behaviour, and artificial neural networks}
+    \item Organiser: Jana Jarecki
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+\textbf{\href{https://meeting.spsp.org/2021/programming/full-schedule}{Society for Personality and Social Psychology’s Annual Convention (SPSP) 2021}} 
 \begin{outerlist}
   \item[] \textit{Austin, Texas (Virtual)}\hfill\textbf{11 Feb 2021}
   \begin{innerlist}
@@ -447,7 +684,7 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
     \item Organisers: Emma Norris, Tabea Schoeler, \&  Jessie Baldwin
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}
+\vspace{20pt}
 
 \textbf{\href{http://mathpsych.org/conferences/2020/}{MathPsych/ICCM 2020}} 
 \begin{outerlist}
@@ -764,43 +1001,32 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 \end{outerlist}
 \end{samepage}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{TEACHING}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
-\begin{outerlist}
-    \item[Postdoctoral Research Assistant] \hfill \textbf{2014--2016}
-    \item[\textit{\href{http://oliviaguest.com/connectionism}{Block Practical: Connectionist Models and Cognitive Processes}}] \
-  \begin{innerlist}
-    \item Module: \textit{Third Year, B.Sc.}
-    \item Designed course structure and materials (slides and exercises).
-    \item Students replicated from scratch Tyler et al. (2000) in Python.
-    \item Created course website: \href{http://oliviaguest.com/connectionism}{oliviaguest.com/connectionism}.
-  \end{innerlist}
-      \item[\textit{Tutorial: Language and Cognition}] \
-  \begin{innerlist}
-    \item Module: \textit{Second Year, B.Sc.}
-    \item Set essays and marked exams.
-  \end{innerlist}
-\end{outerlist}
-\vspace{8pt}
-
-\textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
-UK}
-\begin{outerlist}
-   \item[Graduate Teaching Assistant] \hfill \textbf{2010--2014}
-   \item Modules Taught: \textit{General Foundations of Psychology,
-   Psychobiology, Advanced Research Methods, Advanced Quantitative Methods, Memory and Cognition, Matlab Programming for Psychological Science, }
-\end{outerlist}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{MAINSTREAM MEDIA}
+\section{MAINSTREAM MEDIA \& OUTREACH}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{-10pt}
 
+ \begin{outerlist}
 
+   
+   
+  
+   \item[\textbf{Selected popular blog posts from:}] \href{http://neuroplausible.com}{neuroplausible.com} \hfill \textbf{2017--}
+      \begin{innerlist}
+        \item \href{https://neuroplausible.com/programming}{Why Women in Psychology Can't Program}
+         \item \href{https://neuroplausible.com/matlab}{I Hate Matlab: How an IDE, a Language, and a Mentality Harm} 
+
+   \end{innerlist}
+   
+ \end{outerlist}
 \begin{outerlist}
+
+ \item[\textbf{\href{https://doi.org/10.48550/arXiv.2202.08674}{ Measuring Trustworthiness or Automating Physiognomy?}}] \hfill\textbf{2022}
+\begin{innerlist}
+	\item Media Coverage: \href{https://thedebrief.org/no-machine-learning-cant-predict-trustworthiness-based-on-faces/
+}{\textit{No, Machine Learning Can’t Predict Trustworthiness Based on Faces}}, The Debrief
+\end{innerlist}
+
  \item[\textbf{\href{https://dx.doi.org/10.1007/s42001-019-00053-9}{Gerrymandering and computational redistricting}}] \hfill\textbf{2017}
 \begin{innerlist}
 	\item Media Coverage: \href{https://www.seeker.com/tech/an-unbiased-algorithm-could-help-put-an-end-to-partisan-gerrymandering}{\textit{An Unbiased Algorithm Could Help Put an End to Partisan Gerrymandering}}, Seeker
@@ -845,49 +1071,52 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
  
  
  
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{REFEREES}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-10pt}
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \section{REFEREES}
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \vspace{-10pt}
 
-\begin{outerlist}
-\item[\textbf{Andrea E. Martin}, \emph{Current PI/Employer}]   \hfill \textbf{2020--}
-\begin{innerlist}
-    \item Email: \href{mailto:Andrea.Martin@mpi.nl}{andrea.martin@mpi.nl}
-    \item Job title: Research Group Leader
-    \item {Affiliations:} DCCN, Radboud, NL \& MPI for Psycholinguistics, NL
-    \item Website: \href{http://andreaemartin.com/}{andreaemartin.com}
-\end{innerlist}
-
-
-\item[\textbf{Bradley C. Love}, \emph{Previous PI/Employer}] \hfill \textbf{2016--2019}
-\begin{innerlist}
-    \item Email: \href{mailto:b.love@ucl.ac.uk}{b.love@ucl.ac.uk}
-    \item Job title: Professor of Cognitive and Decision Sciences 
-    \item {Affiliations:} Experimental Psychology, UCL, UK \& Alan Turing Institue, UK
-    \item Website: \href{http://bradlove.org/}{bradlove.org}
-\end{innerlist}
-
-\item[\textbf{Nicolas P. Rougier},  \emph{Colleague (at ReScience) and collaborator}] \hfill \textbf{2015--}
-\begin{innerlist}
-    \item Email: \href{mailto:Nicolas.Rougier@inria.fr }{nicolas.rougier@inria.fr}
-    \item Job title: Professor --- Team Leader
-    \item {Affiliations:} Inria (National Institute for Research in Digital Science and Technology), France \& Institute of Neurodegenerative Diseases, University of Bordeaux, France
-    \item Website: \href{https://www.labri.fr/perso/nrougier/}{www.labri.fr/perso/nrougier}
-\end{innerlist}
+% \begin{outerlist}
+% \item[\textbf{Andrea E. Martin}, \emph{Current PI/Employer}]   \hfill \textbf{2020--}
+% \begin{innerlist}
+%     \item Email: \href{mailto:Andrea.Martin@mpi.nl}{andrea.martin@mpi.nl}
+%     \item Job title: Research Group Leader
+%     \item {Affiliations:} DCCN, Radboud, NL \& MPI for Psycholinguistics, NL
+%     \item Website: \href{http://andreaemartin.com/}{andreaemartin.com}
+% \end{innerlist}
 
 
-\item[\textbf{Richard P. Cooper}, \emph{M.Sc. \& Ph.D. Supervisor} ] \hfill \textbf{2009--2014}
-\begin{innerlist}
-    \item Email: \href{mailto:r.cooper@bbk.ac.uk}{r.cooper@bbk.ac.uk}
-    \item Job title: Professor of Cognitive Science 
-    \item {Affiliation:} Psychological Sciences, Birkbeck, UK
-    \item Website: \href{http://ccnl.bbk.ac.uk/}{ccnl.bbk.ac.uk}
-\end{innerlist}
+% \item[\textbf{Bradley C. Love}, \emph{Previous PI/Employer}] \hfill \textbf{2016--2019}
+% \begin{innerlist}
+%     \item Email: \href{mailto:b.love@ucl.ac.uk}{b.love@ucl.ac.uk}
+%     \item Job title: Professor of Cognitive and Decision Sciences 
+%     \item {Affiliations:} Experimental Psychology, UCL, UK \& Alan Turing Institue, UK
+%     \item Website: \href{http://bradlove.org/}{bradlove.org}
+% \end{innerlist}
+
+% \item[\textbf{Nicolas P. Rougier},  \emph{Colleague (at ReScience) and collaborator}] \hfill \textbf{2015--}
+% \begin{innerlist}
+%     \item Email: \href{mailto:Nicolas.Rougier@inria.fr }{nicolas.rougier@inria.fr}
+%     \item Job title: Professor --- Team Leader
+%     \item {Affiliations:} Inria (National Institute for Research in Digital Science and Technology), France \& Institute of Neurodegenerative Diseases, University of Bordeaux, France
+%     \item Website: \href{https://www.labri.fr/perso/nrougier/}{www.labri.fr/perso/nrougier}
+% \end{innerlist}
+
+
+% \item[\textbf{Richard P. Cooper}, \emph{M.Sc. \& Ph.D. Supervisor} ] \hfill \textbf{2009--2014}
+% \begin{innerlist}
+%     \item Email: \href{mailto:r.cooper@bbk.ac.uk}{r.cooper@bbk.ac.uk}
+%     \item Job title: Professor of Cognitive Science 
+%     \item {Affiliation:} Psychological Sciences, Birkbeck, UK
+%     \item Website: \href{http://ccnl.bbk.ac.uk/}{ccnl.bbk.ac.uk}
+% \end{innerlist}
 
 
 
-\end{outerlist}
+% \end{outerlist}
+
+%%% funding
+%% shuttleworth grant 5k dollars
 
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \section{THINGS I HAVE NAMED}
